Name:     loopgotowhile-server
Version:  0.1
Synopsis: Online evaluation service for loopgotowhile (https://github.com/eugenkiss/loopgotowhile)

Homepage:     loopgotowhile.eugenkiss.com
License:      BSD3
License-file: LICENSE
Maintainer:   Eugen Kiss (eugen@eugenkiss.com)
Author:       Eugen Kiss (eugen@eugenkiss.com)
Category:     Web

Cabal-Version: >= 1.2
Build-Type:    Simple

Source-Repository head
    Type:     git
    Location: https://github.com/eugenkiss/loopgotowhile-site
    Branch:   master

Executable LGWServer
    Main-Is:     LGWServer.hs
    GHC-Options: -Wall -O2 -static -optc-static -optl-static -optl-pthread -threaded -rtsopts -with-rtsopts=-N2 -funbox-strict-fields 
    Build-Depends: 
        base >= 4.0,
        haskell98,
        mtl,
        deepseq,
        split,
        happstack-server,
        loopgotowhile
